# Ray_Tracing_SDL2

./: Application.cpp  Box.cpp  Box.h  CMakeLists.txt  CMakeLists.txt.txt  Calc.h  Camera.cpp  Camera.h  Data.txt  Factory.h  FactoryBox.h  FactoryPyramid.h  FactorySphere.h  Figure.cpp  Figure.h  GeometricTransforms.cpp  GeometricTransforms.h  Header.h  Img.cpp  Img.h  InputFile_Info.txt  LightBase.cpp  LightBase.h  LinAlgMatrix.cpp  LinAlgMatrix.h  LinAlgVector.cpp  LinAlgVector.h  MaterialBase.cpp  MaterialBase.h  Plane.cpp  Plane.h  PointLight.cpp  PointLight.h  Pyramid.cpp  Pyramid.h  README.md  Ray.cpp  Ray.h  SimpleMaterial.cpp  SimpleMaterial.h  (+7 more)
